custom tools, ProtobufTool运行成功,可以在vs中把proto生成相应的cs文件

--- a/CSharp/App/Modules/Robot/Robot.csproj
+++ b/CSharp/App/Modules/Robot/Robot.csproj
@@ -54,6 +54,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Person.pb.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Person.proto</DependentUpon>
+    </Compile>
     <Compile Include="Robot.cs" />
     <Compile Include="RobotModule.cs" />
     <Compile Include="RobotViewModel.cs" />
@@ -88,6 +94,7 @@
     <None Include="Packages.config" />
     <None Include="Person.proto">
       <Generator>ProtobufTool</Generator>
+      <LastGenOutput>Person.pb.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
