增加 加载dll的辅助类，方便动态加载dll

--- a/CSharp/Platform/Helper/Helper.csproj
+++ b/CSharp/Platform/Helper/Helper.csproj
@@ -35,6 +35,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LoaderHelper.cs" />
     <Compile Include="XmlHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
