增加了两个扩展类,方便日志输出string的hex格式

--- a/CSharp/Platform/Helper/Helper.csproj
+++ b/CSharp/Platform/Helper/Helper.csproj
@@ -35,7 +35,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ByteHelper.cs" />
     <Compile Include="LoaderHelper.cs" />
+    <Compile Include="StringHelper.cs" />
     <Compile Include="XmlHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
