ENetCS Address类直接放到C#层,不需要再包装ENetAddress

--- a/CSharp/App/Editor/Editor.csproj
+++ b/CSharp/App/Editor/Editor.csproj
@@ -119,7 +119,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="App.config" />
     <None Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
