1.移除第三方库目录，所有库都放到platform目录下面 2.增加realm server准备试用WCF

--- a/CSharp/Platform/ENet/ENet.vcxproj
+++ b/CSharp/Platform/ENet/ENet.vcxproj
@@ -43,7 +43,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)\ThirdParty\;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\Platform\;$(IncludePath)</IncludePath>
     <OutDir>$(SolutionDir)\Bin\</OutDir>
     <IntDir>$(SolutionDir)\Temp\</IntDir>
     <TargetExt>.dll</TargetExt>
