--- a/CSharp/App/Modules/Robot/Packages.config
+++ b/CSharp/App/Modules/Robot/Packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="BouncyCastle" version="1.7.0" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
+  <package id="Google.ProtocolBuffers" version="2.4.1.473" targetFramework="net45" />
   <package id="Prism" version="4.1.0.0" targetFramework="net45" />
   <package id="Prism.MEFExtensions" version="4.1.0.0" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.612" targetFramework="net45" />
