--- a/CSharp/App/LoginClient/LoginClient.csproj
+++ b/CSharp/App/LoginClient/LoginClient.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{8650195A-7904-4EBC-9D81-B392A7E9B9B3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RealmClient</RootNamespace>
-    <AssemblyName>RealmClient</AssemblyName>
+    <RootNamespace>LoginClient</RootNamespace>
+    <AssemblyName>LoginClient</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
@@ -38,13 +38,16 @@
     <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ENetChannel.cs" />
     <Compile Include="GateSession.cs" />
+    <Compile Include="IMessageChannel.cs" />
     <Compile Include="Messages.cs" />
     <Compile Include="LoginClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LoginException.cs" />
     <Compile Include="RealmSession.cs" />
     <Compile Include="SRP6Client.cs" />
+    <Compile Include="TcpChannel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Platform\ENet\ENet.csproj">
