--- a/CSharp/Platform/ENetCpp/ENetCpp.vcxproj.filters
+++ b/CSharp/Platform/ENetCpp/ENetCpp.vcxproj.filters
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="callbacks.c" />
-    <ClCompile Include="compress.c" />
-    <ClCompile Include="host.c" />
-    <ClCompile Include="list.c" />
-    <ClCompile Include="packet.c" />
-    <ClCompile Include="peer.c" />
-    <ClCompile Include="protocol.c" />
-    <ClCompile Include="unix.c" />
-    <ClCompile Include="win32.c" />
+    <ClCompile Include="callbacks.cc" />
+    <ClCompile Include="compress.cc" />
+    <ClCompile Include="host.cc" />
+    <ClCompile Include="list.cc" />
+    <ClCompile Include="packet.cc" />
+    <ClCompile Include="peer.cc" />
+    <ClCompile Include="protocol.cc" />
+    <ClCompile Include="unix.cc" />
+    <ClCompile Include="win32.cc" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ENet">
