--- a/CSharp/App/Modules/Robot/Packages.config
+++ b/CSharp/App/Modules/Robot/Packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
+  <package id="Extended.Wpf.Toolkit" version="1.9.0" targetFramework="net45" />
   <package id="Prism" version="4.1.0.0" targetFramework="net45" />
   <package id="Prism.MEFExtensions" version="4.1.0.0" targetFramework="net45" />
+  <package id="treeviewex" version="0.1.0.1" targetFramework="net45" />
 </packages>
