--- a/CSharp/App/Editor/app.config
+++ b/CSharp/App/Editor/app.config
@@ -1,21 +1,25 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<runtime>
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="Microsoft.Practices.Prism" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-				<bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0"/>
-			</dependentAssembly>
-		</assemblyBinding>
-	</runtime>
-	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
-	</startup>
-	<connectionStrings>
-		<add name="DataCenterEntities" connectionString="metadata=res://*/DataCenter.csdl|res://*/DataCenter.ssdl|res://*/DataCenter.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.11.93;user id=tanghai;password=tanghai;persist security info=True;database=tanghai&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings>
-	<appSettings>
-		<add key="IP" value="192.168.11.95"/>
-		<add key="Port" value="8888"/>
-	</appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Practices.Prism" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.6.4.0" newVersion="6.6.4.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <connectionStrings>
+    <add name="DataCenterEntities" connectionString="metadata=res://*/DataCenter.csdl|res://*/DataCenter.ssdl|res://*/DataCenter.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.11.93;user id=tanghai;password=tanghai;persist security info=True;database=tanghai&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  <appSettings>
+    <add key="IP" value="192.168.11.95" />
+    <add key="Port" value="8888" />
+  </appSettings>
 </configuration>
