--- a/CSharp/App/Editor/Editor.csproj
+++ b/CSharp/App/Editor/Editor.csproj
@@ -109,13 +109,13 @@
       <Project>{6cd185d1-08e0-4729-a999-2d5b57ba8193}</Project>
       <Name>BehaviorTree</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Modules\Login\Login.csproj">
+      <Project>{5aa48f9a-455d-4cd8-a605-a3ac38283e60}</Project>
+      <Name>Login</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Modules\Robot\Robot.csproj">
       <Project>{5d6ecbcd-be14-4dcb-baec-57089748b164}</Project>
       <Name>Robot</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Modules\WaiGua\WaiGua.csproj">
-      <Project>{5aa48f9a-455d-4cd8-a605-a3ac38283e60}</Project>
-      <Name>WaiGua</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
