1.gate封包zip解析正确 2.nuget签入版本库中保存 3.boss使用发送，再等待响应模式

--- a/CSharp/Platform/Helper/Helper.csproj
+++ b/CSharp/Platform/Helper/Helper.csproj
@@ -48,6 +48,7 @@
     <Compile Include="JsonHelper.cs" />
     <Compile Include="LoaderHelper.cs" />
     <Compile Include="ProtobufHelper.cs" />
+    <Compile Include="RandomHelper.cs" />
     <Compile Include="StringHelper.cs" />
     <Compile Include="TimeHelper.cs" />
     <Compile Include="XmlHelper.cs" />
